# labirintals

./: README.md
AI/: Bot.cpp  Bot.h  CMakeLists.txt  README.md  main.cpp  todo.txt
AI/Algorithms/: ExecutorAlgorithm.h  LucaTremoAlgorithm.cpp  LucaTremoAlgorithm.h  RandomStepAlgorithm.cpp  RandomStepAlgorithm.h
AI/Client/: Client.cpp  Client.h  Commands.cpp  Commands.h
AI/Fields/: Field.h  FieldDescription.h  ServerField.cpp  ServerField.h
AI/Manager/: Manager.h
AI/Manager/Executor/: ManagerExecutor.h  ServerManager.cpp  ServerManager.h
AI/Manager/Visualization/: LogManagerVisualization.cpp  LogManagerVisualization.h  ManagerVisualization.h
AI/Navigation/: AttendanceMap.h  BorderMap.cpp  BorderMap.h  Map.cpp  Map.h  Position.cpp  Position.h
Client/: .gitignore  AimObject.py  Core.py  FindServerMenu.py  GameObject.py  GameScene.py  MainMenu.py  MazeBlock.py  NetworkManager.py  PlayerObject.py  Readme.md  Scene.py  WaitStartGameMenu.py  main.py  setup.py  todo.txt
Client/configs/: config.json
Server/: Readme.md  build.gradle.kts  labirint  server.json  settings.gradle.kts  todo.txt
Server/resources/: application.conf
Server/src/: Utils.kt
Server/src/client/: Client.kt
Server/src/model/: BaseModel.kt  ConnectionModel.kt  MakeStepModel.kt  ServerConfig.kt  ServerSettings.kt
Server/src/model/base/: CellModel.kt  Command.kt  ErrorModel.kt  ParamsModel.kt  PlayerModel.kt
Server/src/model/requests/: ConnectionModel.kt  MakeStepModel.kt
Server/src/model/responses/: ConnectionAnswer.kt  GameParamsAnswer.kt  GetGameResultResponse.kt  PositionAnswer.kt  StepAnswer.kt
Server/src/server/: LocalStorage.kt  Server.kt  ServerManager.kt
Server/src/server/commands/: BaseCommand.kt  CommandFactory.kt  ConnectionCommand.kt  DisconnectCommand.kt  GetGameParamsCommand.kt  GetGameResult.kt  GetGameResultCommand.kt  GetMapCommand.kt  GetPositionCommand.kt  GetStepInfoCommand.kt  MakeStepCommand.kt
Server/src/server/labirint/: Labirint.kt
docs/: build_all.md  client_server_api.md  index.md
(+4 files in other folders)
